--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
     "homebridge",
     "jsx"
   ],
-  "homepage": "https://github.com/credding/homebridge-jsx#readme",
+  "homepage": "https://github.com/credding/homebridge-jsx#README.md",
   "bugs": {
     "url": "https://github.com/credding/homebridge-jsx/issues"
   },
   "license": "ISC",
   "author": "Chandler Redding",
-  "main": "index.js",
+  "files": [
+    "lib/"
+  ],
+  "main": "./lib/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/credding/homebridge-jsx.git"
   },
   "scripts": {
-    "build": "rimraf \"./dist/*\" && tsc && cp \"./package.json\" \"README.md\" \"LICENSE\" \"./dist/\""
+    "clean": "rimraf \"./lib/*\"",
+    "build": "npm run clean && tsc",
+    "prepare": "npm run build"
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.0",
@@ -28,6 +33,7 @@
     "typescript": "^4.1.2"
   },
   "engines": {
-    "homebridge": ">=1.0.0"
+    "homebridge": ">=1.0.0",
+    "node": ">=14.15.0"
   }
 }
