--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@credding/homebridge-jsx",
-  "version": "0.1.0",
-  "description": "Configure Homebridge dynamic platform plugins with JSX",
+  "version": "0.2.0",
+  "description": "Configure Homebridge plugins with JSX",
   "keywords": [
     "homebridge",
     "jsx"
@@ -28,7 +28,12 @@
   "devDependencies": {
     "@tsconfig/node14": "^1.0.0",
     "@types/node": "^14.14.14",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
     "homebridge": "^1.1.6",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.1.2"
   },
