--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "scripts": {
     "clean": "rimraf \"./lib/*\"",
-    "build": "npm run clean && tsc",
+    "lint": "eslint --max-warnings=0 \"./src/\" && prettier --check \"./src\"",
+    "compile": "tsc",
+    "build": "npm run clean && npm run lint && npm run compile",
     "prepare": "npm run build"
   },
   "devDependencies": {
