--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
   },
   "devDependencies": {
     "@tsconfig/node14": "^1.0.0",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.14",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "homebridge": "^1.1.6",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   },
   "engines": {
